Update src/main/java/com/example/demo/service/impl/BookServiceImpl.java
Co-authored-by: Olena Bruiako <bruyako.elena@gmail.com>